Fix note info section overflow

--- a/scss/elements/_noteBox.scss
+++ b/scss/elements/_noteBox.scss
@@ -22,6 +22,7 @@ note-box {
 			padding-inline: var(--editable-text-padding-inline);
 			padding-block: var(--editable-text-padding-block);
 			border: 1px solid rgba(0,0,0,0);
+			box-sizing: border-box;
 
 			min-height: 20px;
 			@include comfortable {
